# CMakeTask

./: CMakeLists.txt  README.md
A/: preparing.py
B/: CMakeLists.txt  lib.cpp  lib.h
C/: main.cpp  main.h
