cmake_minimum_required(VERSION 2.8)
project(CMakeTask)
execute_process(COMMAND python3 preparing.py WORKING_DIRECTORY A)
include_directories("${PROJECT_SOURCE_DIR}")
add_subdirectory(B)
set(CMAKE_CXX_FLAGS "-std=c++11 -Wall")
set(SOURCES_LIST "C/main.cpp")
add_executable(CMakeTask ${SOURCES_LIST})
target_link_libraries(CMakeTask ${PROJECT_NAME}_lib)
install(TARGETS CMakeTask DESTINATION bin)
